<resources>
    <string name="app_name" translatable="false">HR App</string>
    <string name="ar">AR</string>
    <string name="en" translatable="false">EN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="login_with_biometric">Login With Biometric</string>
    <string name="covid_19">COVID-19</string>
    <string name="logout">Logout</string>
    <string name="salary_info">Salary Info</string>
    <string name="last_logout">Check Out</string>
    <string name="first_login">Check In</string>
    <string name="date">Date</string>
    <string name="direct_manger">Direct Manager</string>
    <string name="requests">Requests</string>
    <string name="sign_in_out_logs">Sign In/Out Logs</string>
    <string name="my_hr">HR Reps</string>
    <string name="my_team">My Team</string>
    <string name="company_policy">Company Polices</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="notification">Notification</string>
    <string name="faq">FAQ</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="exit_app">Exit App?</string>
    <string name="cancel">Cancel</string>
    <string name="for_signing_in_out">For Signing In/Out</string>
    <string name="enter_salary">Enter Salary</string>
    <string name="l_e">L.E</string>
    <string name="number_of_deductions">Number of Deductions</string>
    <string name="money_deductions">Money Deductions</string>
    <string name="total_salary">Total Salary</string>
    <string name="click_here_for_salary_details">*click here for salary details</string>
    <string name="select_city">Select City</string>
    <string name="app_version" translatable="false">1.10</string>
    <string name="powered_by_gs_group" translatable="false">Powered by GS-Group (%1$s %2$s) </string>
    <string name="app_version_name" translatable="false">VA</string>
    <string name="app_version_lite" translatable="false">VL</string>
    <string name="select_area">Select Area</string>
    <string name="no_data">no data found</string>
    <string name="search">Search</string>
    <string name="user_guide">User Guide</string>
    <string name="new_notification">New Notifications</string>
    <string name="old_notification">Old Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="total_num_of_employees">Total Num of Employees</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="server_error" translatable="false">Server Error, please try again later</string>
    <string name="network_error">please check your network and try again…</string>
    <string name="ask_change_language">are you sure you want to change language?</string>
    <string name="log_out_check_message">are you sure you want to logout?</string>
    <string name="latest_virus_news">Latest Virus News</string>
    <string name="i_ve_infected_by_virus">I\'ve infected by virus</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="password_helper_text">not less than 8 numbers or chars</string>
    <string name="infect_date">Infect Date</string>
    <string name="date_of_symptoms_appeared">Date of Symptoms appeared</string>
    <string name="exam_date">Examination Date</string>
    <string name="isolation_starting_date">Isolation Starting Date</string>
    <string name="isolation_period">Isolation Period</string>
    <string name="what_is_symptoms">What\'s symptoms</string>
    <string name="attachments">Attachments</string>
    <string name="add_image">Add Image</string>
    <string name="send">Send</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="what_problem_details">Problem Details</string>
    <string name="phone_notes">- please enter the business phone number provided by the company</string>
    <string name="directed_to">Directed To</string>
    <string name="salary_info_notes">- You can request the insurance print once every 3 months.\n
    - you can receive it from HR department after 2 working days from the request.</string>
    <string name="print_insurance_notes">- You can request the insurance print once every 3 months.\n
    - you can receive it from HR department after 10 working days from the request.</string>
    <string name="describe_ur_issue">Describe Your Issue</string>
    <string name="urgent_problem">Urgent Problem?</string>
    <string name="medical_approval_to_treat_a_chronic_disease">Medical approval to treat a chronic disease</string>
    <string name="normal_medical_approval">Normal Medical Approval</string>
    <string name="my_requests">My Requests</string>
    <string name="hr_request">HR Requests</string>
    <string name="direct_manager_requests">Direct Manager Requests</string>
    <string name="audit_request">Audit Request</string>
    <string name="details">Details</string>
    <string name="less_than_3" translatable="false">Less Than 3</string>
    <string name="more_than_3" translatable="false">More Than 3</string>
    <string name="less_than_6" translatable="false">Less Than 6</string>
    <string name="more_than_6" translatable="false">MoreThan 6</string>
    <string name="are_you_employee" translatable="false">Are you Employee?</string>
    <string name="are_you_representative" translatable="false">Are you Representative?</string>
    <string name="work_period" translatable="false">Work Period</string>
    <string name="payment_period" translatable="false">Payment Period</string>
    <string name="from_monthly_salary" translatable="false">From Monthly Salary</string>
    <string name="yearly_salary" translatable="false">Yearly</string>
    <string name="salary" translatable="false">Salary</string>
    <string name="amount_valid_from_company" translatable="false">Amount Valid From The Company</string>
    <string name="working_days" translatable="false">Working Days</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="hire_new_employee">Hire New Employee</string>
    <string name="hire_replacement_employee">Hire Replacement Employee</string>
    <string name="select_company">Select Company</string>
    <string name="select_job_title">Select Job Title</string>
    <string name="appointing_the_employee_to_a_maximum">Hire the employee to a maximum date</string>
    <string name="filter">Filter</string>
    <string name="date_">Date:</string>
    <string name="requested_from_">Requested From:</string>
    <string name="resign_date">Resign Date</string>
    <string name="resign_details">Resign Details</string>
    <string name="select_vacation_type">Select Vacation Type</string>
    <string name="select_normal_vacation_type">Select Normal Vacation Type</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="days">Num. of Days</string>
    <string name="vacation_balance">Vacation Balance</string>
    <string name="the_employee">Employee</string>
    <string name="select_employee">Select Employee</string>
    <string name="penalty_type">Penalty Type</string>
    <string name="select_penalty_type" translatable="false">Select Penalty Type</string>
    <string name="penalty_repeat" translatable="false">Penalty Repeat</string>
    <string name="select_penalty_repeat" translatable="false">Select Penalty Repeat</string>
    <string name="penalty_value" translatable="false">Penalty Value</string>
    <string name="select_penalty_value" translatable="false">Select Penalty Value</string>
    <string name="reason_and_details_of_the_penalty" translatable="false">Reason and details of the penalty</string>
    <string name="from_hour">From Hour</string>
    <string name="to_hour">To Hour</string>
    <string name="full_day">Full Day</string>
    <string name="mission_details">Mission Details</string>
    <string name="pinned">Pinned</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="latest_news">Latest News</string>
    <string name="all_data_required">enter all data correctly</string>
    <string name="continue_">Continue</string>
    <string name="news">News</string>
    <string name="select_year">Select Year</string>
    <string name="select_month">Select Month</string>
    <string name="colors_table">Colors Table</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="invalid_area_selected">please choose area first</string>
    <string name="out_of_area_range">out of area range</string>
    <string name="getting_your_location">getting your location first, please wait…</string>
    <string name="allow_location_permission">please allow location permission</string>
    <string name="please_select_city_first">please select city first</string>
    <string name="get_location_settings_failed">sorry we can\'t get the location, please check the location settings</string>
    <string name="private_number">Private Number</string>
    <string name="business_number">Business Number</string>
    <string name="location_info">Location Info:</string>
    <string name="coordinates_">Coordinates:</string>
    <string name="serial_num_">Serial Num:</string>
    <string name="date_time_">Date-Time:</string>
    <string name="get_serial">Get Serial</string>
    <string name="please_allow_permission_phone_critical">please allow permission phone status to proceed</string>
    <string name="complain">Complain</string>
    <string name="phone_issue_request">Issue in Business Number</string>
    <string name="salary_info_request">Salary Info</string>
    <string name="complain_request">Send Complain</string>
    <string name="print_insurance_request">Print Insurance</string>
    <string name="medical_card_request">Medical Card</string>
    <string name="medical_approval_request">Medical Approval</string>
    <string name="auth_area_request">Authorize Area</string>
    <string name="borrow_request">Borrow Request</string>
    <string name="exp_certificate_request">Exp. Certificate</string>
    <string name="hire_emp_request">Hire Employee (New - Replace)</string>
    <string name="resign_request">Resign</string>
    <string name="penalty_request">Penalty</string>
    <string name="vacation_request">Vacation</string>
    <string name="excuse_request">Excuse</string>
    <string name="mission_request">Mission</string>
    <string name="replacement_medical_card">Replacement</string>
    <string name="new_">New</string>
    <string name="new_medical_card_notes">- You can request a new medical card after passing 3 months from your joining date.</string>
    <string name="replacement_medical_card_notes">- An amount of EGP 150 will be deducted from your salary for one time only, which is the expenses of issuing a lost card.\n
    - You can receive the card from the Human Resources department after 20 days have passed from the date the application was made.</string>
    <string name="exp_certificate_notes">
        - You can request the exp. certificate once every 3 months.\n
        - You can receive it from HR department after 10 working days from the request.
    </string>
    <string name="allow_image_permissions">please allow image permissions to continue</string>
    <string name="filter_my_team">Filter My Team</string>
    <string name="employee_name">Employee name…</string>
    <string name="area_">Area:</string>
    <string name="check_in_time_">Check In:</string>
</resources>