<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/_16sdp"
            tools:background="@drawable/app_background">

            <TextView
                android:id="@+id/tv_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="@dimen/_8sdp"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_lock"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_change_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="@dimen/_8sdp"
                android:text="@string/change_language"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintEnd_toStartOf="@+id/btn_en"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_change_password" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ar"
                style="@style/ButtonLangStyle"
                android:background="@drawable/btn_lang_right"
                android:text="@string/ar"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_change_language"
                app:layout_constraintBottom_toBottomOf="@id/tv_change_language"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_en"
                style="@style/ButtonLangStyle"
                android:background="@drawable/btn_lang_left"
                android:text="@string/en"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_ar"
                app:layout_constraintTop_toTopOf="@id/btn_ar" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</layout>