<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="viewModel"
            type="com.gsgroup.hrapp.ui.fragment.requests.corner.RequestsCornerViewModel"
            />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/_16sdp"
            tools:background="@drawable/app_background"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_my_requests"
                style="@style/SubmitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_requests"
                android:onClick="@{()->viewModel.onMyRequestsClick()}"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_8sdp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_hr"
                style="@style/SubmitButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/hr_request"
                android:onClick="@{()->viewModel.onRequestClick(true)}"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintEnd_toStartOf="@+id/btn_dm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_my_requests"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dm"
                style="@style/SubmitButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:onClick="@{()->viewModel.onRequestClick(false)}"
                android:text="@string/direct_manager_requests"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_hr"
                app:layout_constraintTop_toBottomOf="@+id/btn_my_requests"
                android:layout_marginStart="@dimen/_8sdp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_audit_request"
                style="@style/SubmitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audit_request"
                app:icon="@drawable/ic_audit"
                app:iconGravity="end"
                android:onClick="@{()->viewModel.onAuditClick()}"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@+id/btn_hr"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</layout>